# Test3DViver

./: README.md
src/: Makefile  Manual.texi  gif.h  s21_test.cc
src/3DViewer/: CMakeLists.txt  color_setting_class.h  controller.h  controller_settings.h  factory_color_settings.h  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  model.cc  model.h  myglwidget.cc  myglwidget.h  object.h  parser.cc  parser.h  s21_matrix_constructor.cc  s21_matrix_oop.cc  s21_matrix_oop.h  s21_matrix_operator.cc  setting.h
src/leaks/: test.c
